# Alphabot-MAI

./: Backlog.xlsx
ImageProcessing/: CMakeLists.txt  colorDetection.cpp  webcamInput.cpp
ImageProcessing/Contours+Masses/: findContours.cpp  sceneOrientation.cpp
Model/: Backlog.xlsx
Model/Class-Diagram/: classdiagram.uml
Model/Sequence-Diagram/: seqdiagram.uml
Model/Use-Case/: usecase.uml
Source/: CMakeLists.txt  Cam.cpp  Cam.h  Classes.cpp  Control.cpp  Control.h  FSM.cpp  Robot.cpp  Robot.cpp (test)  Robot.h  Robot.h (test)  RobotContr.h  Robot_contr.h  main.cpp
Telegram Bot/: main.py
Use-Case/: usecase.uml
