cmake_minimum_required(VERSION 3.13)
project(Alphabot)
set(CMAKE_CXX_STANDARD 23)
find_package(OpenCV REQUIRED)

set(prog15052023 main.cpp)
include_directories(${OpenCV_INCLUDE_DIRS})
set(SOURCES prog15052023/main.cpp Cam.cpp Control.cpp Robot.cpp)
add_executable(main ${SOURCES})
target_link_libraries(main ${OpenCV_LIBS})
